<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UpAlarm</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_on">Detection On</string>
    <string name="button_off">Detection Off</string>
    <string name="view1">It\'s been</string>
    <string name="view3">Since you last moved!</string>
    <string name="button_community">Community</string>
    <string name="community_name">Community</string>
    <string name="button_history">History</string>
    <string name="history_name">Your History</string>
    <string name="button_home">Home</string>
    <string name="button_karma">Actkarma</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_actkarma">Actkarma</string>
    <string name="actkarma_name">Actkarma</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_community">Community</string>

    <!-- Activity detection strings -->
    <string name="in_vehicle">In a vehicle</string>
    <string name="on_bicycle">On a bicycle</string>
    <string name="on_foot">On foot</string>
    <string name="running">Running</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown">Unknown activity</string>
    <string name="walking">Walking</string>
    <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="detected_activities_title">Your Current Status</string>

    <string name="request_activity_updates">Request Tracking</string>
    <string name="remove_activity_updates">Remove Tracking</string>
    <string name="activity_updates_added">Activity updates added</string>
    <string name="activity_updates_removed">Activity updates removed</string>

    <string name="day_history">Today: </string>
    <string name="week_history">This Week: </string>
    <string name="month_history">This Month: </string>
    <string name="year_history">This Year: </string>

    <string name="not_connected">GoogleApiClient not yet connected. Try again.</string>

</resources>
