<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative"
    android:background="#fff"
    android:gravity="center_vertical">

    <Button
        android:id="@+id/request_activity_updates_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/narrow_space"
        android:onClick="requestActivityUpdatesButtonHandler"
        android:text="@string/request_activity_updates" />

    <Button
        android:id="@+id/remove_activity_updates_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/narrow_space"
        android:onClick="removeActivityUpdatesButtonHandler"
        android:text="@string/remove_activity_updates" />

    <TextView
        android:id="@+id/detected_activities_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/request_activity_updates_button"
        android:layout_marginBottom="@dimen/narrow_space"
        android:layout_marginTop="@dimen/wide_space"
        android:text="@string/detected_activities_title"
        android:textSize="@dimen/headline_text_size" />

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/detected_activities_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detected_activities_title" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_history"
        android:id="@+id/button_history"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actkarma_name"
        android:id="@+id/button_actkarma"
        android:layout_toRightOf="@+id/button_history"
        android:layout_alignParentBottom="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/community_name"
        android:id="@+id/button_community"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/button_actkarma"
        android:layout_toRightOf="@+id/button_actkarma" />

    <TextView
        android:id="@+id/android_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text=""/>

    <TextView
        android:id="@+id/lat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text=""/>

    <TextView
        android:id="@+id/lng"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text=""/>
</RelativeLayout>
