<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative"
    android:background="#fff">

    <TextView
        android:textSize="30dp"
        android:id="@+id/app_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/day_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/wide_space"
        android:layout_marginLeft="@dimen/narrow_space"
        android:layout_below="@+id/app_name"
        android:text="@string/day_history" />

    <!--<ProgressBar
        android:id="@+id/day_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/day_history"
        android:layout_marginTop="@dimen/progress_bar_top_margin"
        android:minHeight="@dimen/progress_bar_min_height"
        android:progress="1" />-->

    <TextView
        android:id="@+id/week_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/wide_space"
        android:layout_marginLeft="@dimen/narrow_space"
        android:layout_below="@+id/day_history"
        android:text="@string/week_history" />

    <!--<ProgressBar
        android:id="@+id/week_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/week_history"
        android:layout_marginTop="@dimen/progress_bar_top_margin"
        android:minHeight="@dimen/progress_bar_min_height"
        android:progress="1" />-->

    <TextView
        android:id="@+id/month_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/wide_space"
        android:layout_marginLeft="@dimen/narrow_space"
        android:layout_below="@+id/week_history"
        android:text="@string/month_history" />

    <!--<ProgressBar
        android:id="@+id/month_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/month_history"
        android:layout_marginTop="@dimen/progress_bar_top_margin"
        android:minHeight="@dimen/progress_bar_min_height"
        android:progress="1" />-->

    <TextView
        android:id="@+id/year_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/wide_space"
        android:layout_marginLeft="@dimen/narrow_space"
        android:layout_below="@+id/month_history"
        android:text="@string/year_history" />
</RelativeLayout>
